# ajcf_steps

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  calc.cpp  calc.hpp  calcsuper.cpp  calcsuper.hpp  cbuild.sh  test.cpp
.github/workflows/: main.yml
scripts/cmake/: common.cmake  sanitizers.cmake  static_analysis.cmake
scripts/docker/: cpp-dev.Dockerfile  cpp-root.Dockerfile
scripts/multipass/: provision-software.sh  sshkey  sshkey.pub  vm-create.bat  vm-destroy.bat  vm-ssh.bat
scripts/shell/: build-project.bat  build-project.sh  build-thirdparties.bat  build-thirdparties.sh  docker-create-images.bat  docker-run-container.bat  test-project.bat  test-project.sh
scripts/vagrant/: Vagrantfile
src/bac/: CMakeLists.txt
src/bac/cs/: CMakeLists.txt
src/bac/cs/cs-client/: CMakeLists.txt  client_app.cpp  client_app.hpp  client_main.cpp
src/bac/cs/cs-domain/: CMakeLists.txt  actors.cpp  actors.hpp  protocol.cpp  protocol.hpp
src/bac/cs/cs-network/: CMakeLists.txt  client.cpp  client.hpp  configuration.hpp  connection.cpp  connection.hpp  messages.hpp  run.hpp  scheduler.hpp  server.cpp  server.hpp
src/bac/cs/cs-server/: CMakeLists.txt  server_app.cpp  server_app.hpp  server_main.cpp
src/bac/domain/: CMakeLists.txt  board.cpp  board.hpp  codebreaker.cpp  codebreaker.hpp  codemaker.cpp  codemaker.hpp  game.cpp  game.hpp  logic.cpp  logic.hpp  options.cpp  options.hpp  solver.cpp  solver.hpp
src/bac/game/: CMakeLists.txt  game_main.cpp
src/bac/test/: CMakeLists.txt  actor_test.cpp  board_test.cpp  codebreaker_test.cpp  codemaker_test.cpp  input_test.cpp  logic_test.cpp  menu_test.cpp  options_test.cpp  random_test.cpp  solver_test.cpp
src/bac/util/: CMakeLists.txt  actor.hpp  input.cpp  input.hpp  logs.hpp  menu.hpp  random.hpp
src/musify/: CMakeLists.txt
src/musify/account/: CMakeLists.txt  accounts.cpp  accounts.hpp  input_output.cpp  input_output.hpp  main.cpp
src/musify/admin/: CMakeLists.txt  admin.hpp  artists.cpp  artists.hpp  main.cpp
src/musify/browse/: CMakeLists.txt  browse_app.cpp  browse_app.hpp  browse_main.cpp  menu_options.hpp
src/musify/holdall/: CMakeLists.txt  actor.hpp  concurrent_queue.hpp  database.cpp  database.hpp  database.impl.cpp  database.impl.hpp  database.txt  database.ut.cpp  input_output.cpp  input_output.hpp  input_output.impl.hpp  input_output.ut.cpp  menu.hpp  musical_base.cpp  musical_base.hpp  musical_factory.cpp  musical_factory.hpp  musical_thing.cpp  musical_thing.hpp  musical_things.cpp  musical_things.hpp  observer.hpp  singleton.hpp  strong_types.cpp  strong_types.hpp  strong_types.ut.cpp
src/musify/welcome/: CMakeLists.txt  main.cpp
src/quickcheat/: CMakeLists.txt  auto.cpp  classes.cpp  conditions_and_loops.cpp  constants.cpp  containers.cpp  conversions.cpp  date_and_time.cpp  dynamic_allocation.cpp  enum_struct_class.cpp  exceptions.cpp  function_main.cpp  function_objects.cpp  functions.cpp  initialization.cpp  inputs_and_outputs.cpp  namespaces_and_using.cpp  pointers_and_arrays.cpp  preprocessor.cpp  preprocessor.hpp  references.cpp  scope_storage_lifetime.cpp  strings.cpp  templates.cpp  threads.cpp  types_algebraic.cpp  types_fundamental.cpp
src/quickstart/: CMakeLists.txt  main.cpp
thirdparties_if_not_vcpkg/: CMakeLists.txt
thirdparties_if_not_vcpkg/date/inc/date/: date.h
thirdparties_if_not_vcpkg/fmt/inc/fmt/: core.h
thirdparties_if_not_vcpkg/ms-gsl/inc/gsl/: string_span
